--- a/sipxpbx/WEB-INF/sipXconfig-web_de.properties
+++ b/sipxpbx/WEB-INF/sipXconfig-web_de.properties
@@ -247,77 +247,77 @@ feature.sbcBridge.description = Der SIP trunking Service ist ein Back to Back Us
 feature.borderController = SBC
 feature.borderController.description = Session Border Controller. Wird nicht benutzt (wird bald gelöscht)
 feature.park = Anruf Parken
-feature.park.description = Der Anruf Parken Service erlaubt es Benutzern einen Anruf in einer Warteschlange zu parken, wo er von einem anderen Benutzer zurückgeholt werden kann. Nur ein Anruf Park Service ist pro Cluster erlaubt und es ist ein optionaler Service. This service requires SIP Proxy server on the same host.
-feature.page = Paging Groups
-feature.page.description = The Paging Groups service allows select users to perform a one-way page to a group of other users. Only select phone models support this feature. Only one paging groups service is allowed per cluster and is an optional service. This service requires at least one SIP Proxy server in the cluster.
-feature.callpilot = CallPilot Voicemail Menu
-feature.callpilot.description = If Nortel voice prompts have been uploaded, this option enables voicemail menu prompts that match Nortel's CallPilot voicemail system.
-feature.bridgeRecording = Conference Event Listener
-feature.bridgeRecording.description = The conference recording service allows conferences to be recorded and mybuddy to receive notifications when someone enters/exits owned conference. This feature will need to be enabled on a per-bridge basis. This service requires the conferencing service to be enabled.
-feature.natTraversal = Media Relay
-feature.natTraversal.description = The media relay service is used for NAT Traversal and for certain SIP trunking situations where RTP media cannot directly traverse a network. If enabled, this service will run alongside the SIP proxy service on each server that also has the SIP Proxy service enabled.
-feature.openacd=Contact Center
-feature.openacd.description=Contact Center service. Enabling this feature also enables Media Services on the same host.
+feature.park.description = Der Anruf Parken Service erlaubt es Benutzern einen Anruf in einer Warteschlange zu parken, wo er von einem anderen Benutzer zurückgeholt werden kann. Nur ein Anruf Park Service ist pro Cluster erlaubt und es ist ein optionaler Service. Dieser Service benötigt einen SIP Proxy Server auf demselben Host.
+feature.page = Paging Gruppen
+feature.page.description = Der Paging Gruppen Service erlaubt es ausgewählten Benutzern einer anderen Benutzergruppe eine Einweg-Page zu schicken. Nur ausgewählte Telefone unterstützen diese Funktion. Nur ein paging Gruppen Service ist pro Cluster erlaubt und es ist ein optionaler Service. Dieser Service benötigt mindestens einen SIP Proxy Server im Cluster.
+feature.callpilot = CallPilot Voicemail Menü
+feature.callpilot.description = Falls die Nortel Benutzerführung hochgeladen worden ist, erlaubt diese Option das aktivieren der Voicemail Menübenutzerführung, welche gleich ist wie das Nortel's CallPilot voicemail System.
+feature.bridgeRecording = Konferenz Event Listener
+feature.bridgeRecording.description = Der Konferenzen Aufnahmeservice erlaubt es Konferenzen aufzuzeichnen und MyBuddy Benachrichtigungen zu empfangen, wenn jemand eigene Konferenzen betritt, oder verlässt. Diese Funktion muss auf einer per-bridge basis aktiviert werden. Dieser Service benötigt den aktivierten Konferenzen Server.
+feature.natTraversal = Medien Relay
+feature.natTraversal.description = Der Medien Relay Service wird für NAT Traversal und bestimmte SIP trunking Situationen benutzt, wo RTP Medien nicht direkt ein Netzwerk durchlaufen können. Falls aktiviert, wird dieser Service zusammen mit dem SIP proxy Service auf jedem Server laufen, welcher den SIP Proxy Service aktiviert hat.
+feature.openacd=Kontakt Center
+feature.openacd.description=Kontakt Center Service. Diese Funktion zu aktivieren, aktiviert ebenfalls Medien Services auf dem gleichen Host.
 feature.sipxdns = DNS
-feature.sipxdns.description = A Domain Name Server resolves server names to IP addresses within the system. Highly recommend you install this service on ever server. Be sure to configure "DNS Forwarders" in "System/DNS Settings" otherwise your server will not be able to resolve any server name outside the cluster.
-feature.mongoArbiter = Distributed Database Arbiter
-feature.mongoArbiter.description = Only needed when you have an even number of distributed databases. Harmful if you have an odd number of distributed databases. Primary server counts as one distributed database. This service helps the distributed databases decide which server to use in the event one of them fails. Only makes sense to have exactly one or exactly zero per cluster.
+feature.sipxdns.description = Ein Domain Name Server löst Servernamen in IP Adressen des Systems auf. Wir empfehlen wärmstens diesen Service auf jedem Server zu installieren. Vergewissern Sie sich, dass "DNS Forwarders" in "System/DNS Settings" eingetragen sind, sonst ist der Server nicht in der Lage irgendwelche Servernamen außerhalb des Clusters aufzulösen.
+feature.mongoArbiter = Verteilter Datenbankarbeiter
+feature.mongoArbiter.description = Wird nur benötigt, wenn Sie eine gerade Anzahl an verteilten Datenbanken haben. Schädlich, wenn Sie eine ungerade Anzahl an verteilten Datenbanken haben. Der primäre Server zählt als eine verteilte Datenbank. Dieser Service hilft der verteilten Datenbank zu entscheiden, welcher Server benutzt werden soll, im Falle dass einer von Ihnen ausfällt. Es macht nur Sinn genau einen, oder keinen in einem Cluster zu haben.
 feature.snmp = SNMP
-feature.snmp.description = SNMP server reports the status of running processes and other server statistics. When enabled, each server will run snmpd service.
+feature.snmp.description = Der SNMP Server berichtet den Status laufender Prozesse und andere Serverstatistiken. Wenn aktiviert, wird jeder Server den SNMPD Service ausführen.
 feature.mail = SMTP
-feature.mail.description = SMTP mail server for sending automated mail from this system.
-feature.sipxlogwatcher = Log watcher
-feature.sipxlogwatcher.description = Service that reads incoming log messages and reacts accordingly. Typically used to trigger a SNMP alarms.
+feature.mail.description = SMTP Mail Server um automatische Mails von diesem System zu senden.
+feature.sipxlogwatcher = Log Beobachter
+feature.sipxlogwatcher.description = Service, welcher eingehende Lognachrichten liest und dementsprechend reagiert. Normalerweise benutzt um einen SNMP Alarm auszulösen.
 feature.rls = RLS
-feature.rls.description = Resource List Server allows end points to monitor the status of other end points. This service requires at least one SIP Proxy server in the cluster.
-feature.event = Event Notifier
-feature.event.description = The WebSockets server and API for notifying clients. The WebSocket protocol makes possible bidirectional communication between a client and a server.
-feature.moh = Music on Hold
-feature.moh.description = Music on hold (MOH) refers to the business practice of playing recorded music to fill the silence that would be heard by telephone callers who have been placed on hold. \
-Music on Hold is supported for all phones that implement the Music On Hold service IETF draft. This service requires Media Services to be enabled.
+feature.rls.description = Resource List Server erlaubt es Endpunkten den Status anderer Endpunkte zu beobachten. Dieser Service benötigt mindestens einen SIP Proxy Server im Cluster.
+feature.event = Event Benachrihtigung
+feature.event.description = Der WebSockets Server und API um andere Clients zu benachrichtigen. Das WebSocket Protokoll macht zweiseitige Kommunikation zwischen einem Client und einem Server.
+feature.moh = Musik während dem Halten
+feature.moh.description = Musik während dem Halten (MOH) bezieht sich auf die Geschäftspraktik aufgenommene Musik abzuspielen um die entstehende Stille am Telefon zu vermeiden, welche von dem Anrufer gehört werden würde, während er in der Warteschleife ist. \
+Musik während dem Halten wird von allen Telefonen unterstützt, welche den IETF Vorschlag unterstützen. Dieser Service benötigt aktivierte Medien Services.
 feature.firewall = Firewall
-feature.firewall.description = Firewall using iptables. Rules are determined automatically based on what services are running.
-feature.recording = Conference Event Listener
-feature.recording.description = When a conference has auto-record setting enabled, this service will automatically record the conference and save it in user mailbox \
-MyBuddy will receive notifications when user enters/lefts owned conference
+feature.firewall.description = Die Firewall benutzt iptables. Regeln werden automatisch ermittelt, basierend darauf, welche Services laufen.
+feature.recording = Konferenz Event Listener
+feature.recording.description = Wenn eine Konferenz automatische Aufnahme aktiviert hat, wird dieser Service automatisch die Konferenz aufzeichnen und in der Benutzer Mailbox speichern \
+MyBuddy bekommt dabei Benachrichtigungen, wenn ein Benutzer eigene Konferenzen betritt, oder verlässt
 feature.intercom = Intercom
-feature.intercom.description = Intercom allows phones to answer calls automatically (without user intervention). Intercom is supported only for devices that can be configured to automatically answer incoming calls. The intercom call can be initiated from any phone. This service requires at least one SIP Proxy server in the cluster.
+feature.intercom.description = Intercom erlaubt es Telefonen Anrufe automatisch anzunehmen (ohne Zutun des Benutzers). Intercom wird nur von Telefonen unterstützt, welche dafür konfiguriert werden können ankommende Anrufe automatisch anzunehmen. Der Intercom Anruf kann von jedem Telefon aus initiiert werden. Dieser Service benötigt mindestens einen SIP Proxy im Cluster.
 feature.dhcpd = DHCP
-feature.dhcpd.description = DHCP Service to supply devices with IP addresses and other critical network settings. Only one DHCP service is allowed per cluster and is an optional service.
+feature.dhcpd.description = DHCP Service um Geräte mit IP Adressen und anderen kritischen Netzwerkeinstellungen zu versorgen. Nur ein DHCP Server ist pro Cluster erlaubt und es ist ein optionaler Service.
 feature.ftp = FTP
-feature.ftp.description = FTP service to supply devices with configuration files. Only one FTP service is allowed and only on primary server. This is an optional service.
+feature.ftp.description = FTP service um Geräte mit Konfigurationsdateien zu versorgen. Es ist nur ein FTP Service erlaubt und nur auf dem primären Server. Dies ist ein optionaler Service.
 feature.tftp = TFTP
-feature.tftp.description = TFTP service to supply devices with configuration files. Only one TFTP service is allowed and only on primary server. This is an optional service.
-feature.tunnel = Encrypted Communication
-feature.tunnel.description = Encryption of relevant communication between servers in your cluster. This is internal to your clustering only and not related to protocols like SIP TLS, or SRTP. This requires Firewall service. This will run Encryption Tunnel Service on all hosts.
-feature.sipxsqa = Network Queue
-feature.sipxsqa.description = Network Queue passes message through cluster including presence information and system events.
-feature.alarms = SNMP Alarms
-feature.alarms.description = SNMP Trap server that will accept trap notifications from parts of system and in turn forward traps to another trap sinks. SNMP service requires SNMP, Log Watcher and SMTP features to be enabled.
+feature.tftp.description = TFTP service um Geräte mit Konfigurationsdateien zu versorgen. Es ist nur ein TFTP Service erlaubt und nur auf dem primären Server. Dies ist ein optionaler Service.
+feature.tunnel = Verschlüsselte Kommunikation
+feature.tunnel.description = Verschlüsselung relevanter Kommunikation zwischen den Servern in Ihrem Cluster. Dies ist nur intern für Ihren Cluster und nicht verbunden mit Protokollen wie SIP TLS, oder SRTP. Dies benötigt den Firewall Service. Dies wird den Verschlüsselungstunnel auf allen Hosts ausführen.
+feature.sipxsqa = Netzwerk Warteschlange
+feature.sipxsqa.description = Die Netzwerk Warteschlange leitet Nachrichten durch den Cluster inklusive Presence Informationen and System events.
+feature.alarms = SNMP Alarme
+feature.alarms.description = SNMP Trap Server welcher trap Benachrichtigungen von anderen Teilen des Systems annimmt und im Gegenzug trps an andere Empfänger weiterleitet. SNMP service benötigt SNMP, Log Watcher und SMTP Funktionen aktiviert.
 feature.ntpd = NTP
-feature.ntpd.description = NTP is a service for setting and and maintaining system time in synchronization with standard time servers.
+feature.ntpd.description = NTP ist ein Service um die System Zeit einzustellen und diese mit Standard Zeitservern abzugleichen.
 feature.mysql = SIP Capture DB
-feature.mysql.description = MySQL Database used for SIP Capture.
-feature.redis = Network Queue DB
-feature.redis.description = Network Queue in-memory persistent store.
+feature.mysql.description = MySQL Datenbank, genutzt für SIP Aufnahme.
+feature.redis = Netzwerk Warteschlangen DB
+feature.redis.description = Netzwerk Warteschlangen in-memory persistent store.
 
 address.dns = DNS
-address.dns = If you've enabled DNS on systems, this allows queries to DNS server from end points such as phones.
+address.dns = Falls Sie DNS auf dem System aktiviert haben, erlaubt dies Anfragen an den DNS Server von Endpunkten wie z.B. Telefonen zu senden.
 address.ftp = FTP (Control)
-address.ftp.description = File Transfer Protocol. Only control port. In order to FTP to work you need both control and data port. FTP is used to deliver configuration files for certain device types.
+address.ftp.description = File Transfer Protocol. Nur Kontrollport. Damit FTP funktionieren kann brauchen Sie beides, einen Kontroll- und einen Datenport. FTP wird dazu benutzt, Konfigurationsdateien für bestimmte Gerätetypen zu übertragen.
 address.ftpData = FTP (Data)
-address.ftpData.description = File Transfer Protocol. Only data port. In order to FTP to work you need both control and data port. FTP is used to deliver configuration files for certain device types.
+address.ftpData.description = File Transfer Protocol. Nur Datenport. Damit FTP funktionieren kann brauchen Sie beides, einen Kontroll- und einen Datenport. FTP wird dazu benutzt, Konfigurationsdateien für bestimmte Gerätetypen zu übertragen.
 address.ftpPasv = FTP (PASV)
-address.ftpData.description = File Transfer Protocol. Passive Mode ports. FTP is used to deliver configuration files for certain device types.
-address.adminApi = Configuration API
-address.adminApiAuth = Bria login (unsecure - port 12000)
-address.secureAdminApi = Configuration External RESTful/SOAP APIs
-address.adminApi.description = SOAP and RESTful web service APIs that allow systems to do such things as add users or restart phones.
+address.ftpData.description = File Transfer Protocol. Passivmodus Port. FTP wird dazu benutzt, Konfigurationsdateien für bestimmte Gerätetypen zu übertragen.
+address.adminApi = Konfigurations API
+address.adminApiAuth = Bria login (unsicher - port 12000)
+address.secureAdminApi = Konfiguration Externe RESTful/SOAP APIs
+address.adminApi.description = SOAP und RESTful web service APIs, welche es Systemen erlauben solche Sachen wie Benutzer hinzuzufügen oder das Telefon neuzustarten.
 address.tftp = TFTP
-address.tftp.description = Trivial File Transfer Protocol. TFTP is used to deliver configuration files for certain device types.
+address.tftp.description = Trivial File Transfer Protocol. TFTP wird dazu benutzt, Konfigurationsdateien für bestimmte Gerätetypen zu übertragen.
 address.ssh = SSH
 address.ssh.description = Secure remote shell.
-address.acdConfig = ACD (Legacy) Configuration XML-RPC API
+address.acdConfig = ACD (Legacy) Konfiguration XML-RPC API
 address.acdMonitor = ACD (Legacy) Monitor XML-RPC API
 address.acdPresenceApi = ACD (Legacy) Presence XML-RPC API
 address.acdPresenceTcp = ACD (Legacy) Presence SIP/TCP
@@ -330,33 +330,33 @@ address.cdrApi = CDR SOAP API
 address.dnsAddress = DNS
 address.freeswitch-xmlrpc = FreeSWITCH XML-RPC API
 address.freeswitch-event = FreeSWITCH ESL API
-address.acc-freeswitch-event = FreeSWITCH ESL for Authorization Codes
+address.acc-freeswitch-event = FreeSWITCH ESL für Authorisierungscode
 address.freeswitch-rtp = FreeSWITCH RTP
 address.freeswitch-sip = FreeSWITCH SIP
 address.imbotRestApi = My Buddy RESTful API
 address.instantMessageWatcher = IM Unified
 address.instantMessageXmlrpc = IM XML-RPC API
 address.instantMessageXmpp = IM XMPP
-address.instantMessageSecureXmpp = IM XMPP (Secure)
+address.instantMessageSecureXmpp = IM XMPP (Sicher)
 address.instantMessageFederation = XMPP Server-Server Federation
-address.instantMessageAdminConsole = Openfire Admin Console (Secure - port 9095)
+address.instantMessageAdminConsole = Openfire Admin Konsole (Secure - port 9095)
 address.instantMessageFileTransferProxy = Openfire File Transfer Proxy
 address.ivrRestApi = IVR RESTful API
-address.mongo = Distributed DB
+address.mongo = Verteilte DB
 address.mongoArbiter = Distributed DB Arbiter
 address.mwiHttpApi = MWI RESTful API
 address.mwiSipTcp = MWI SIP/TCP
 address.mwiSipUdp = MWI SIP/UDP
 address.natRtp = Media Relay/NAT RTP
-address.openacdRestApi = Contact Center RESTful API
-address.openacdWebUI = Contact Center Agent Web UI
-address.openacdSecureWebUI = Contact Center Secure Agent Web UI
+address.openacdRestApi = Kontakt Center RESTful API
+address.openacdWebUI = Kontakt Center Agent Web UI
+address.openacdSecureWebUI = Kontakt Center Sichere Agent Web UI
 address.pageRtp = Paging RTP
 address.pageTcp = Paging SIP/TCP
 address.pageTls = Paging SIP/TLS
 address.pageUdp = Paging SIP/UDP
 address.parkTcp = SIP Proxy - UDP
-address.provisionService = Automatic Phone Provisioning
+address.provisionService = Automatische Telefonprovisionierung
 address.proxyUdp = SIP Proxy - UDP
 address.proxyTcp = SIP Proxy - TCP
 address.proxyTls = SIP Proxy - TLS
@@ -366,11 +366,11 @@ address.registrar-tcp = SIP Registry - TCP
 address.registrar-udp = SIP Registry - UDP
 address.restServerApi = 3PCC RESTful API (Internal)
 address.publicRestServiceApi = 3PCC RESTful API (External)
-address.restServerApi.description = Third Party Call Control API. Not to be used for external use.
+address.restServerApi.description = Drittanbieter Anruf Kontroll API. Nicht für den externen Gebrauch gedacht.
 address.restServerExternalApi = 3PCC RESTful API (External)
-address.restServerExternalApi.description = Third Party Call Control API to be used by client application like Click-to-Call.
+address.restServerExternalApi.description = Drittanbieter Anruf Kontroll API welche von Client Applikationen wie Click-to-Call genutzt wird.
 address.restServerSip = 3PPC SIP API
-address.restServerSip.description = User agent that connects to proxy to initiate calls.
+address.restServerSip.description = Benutzer agent welcher sich auf den Proxy verbindet um Anrufe einzuleiten.
 address.rlsTcp = RLS SIP/TCP
 address.rlsUdp = RLS SIP/UDP
 address.sbcBridgeXmlRpc = SIP Trunking XML-RPC API
@@ -396,7 +396,7 @@ address.rsyslog = RSYSLOG UDP (Port 514)
 address.sipxcdr = PostgreSQL (Port 5432)
 address.mysql = MySQL DB
 address.redis = Redis DB
-archive.configuration.tar.gz.label = Configuration
+archive.configuration.tar.gz.label = Konfiguration
 archive.cdr.tar.gz.label = CDR
 archive.voicemail.tar.gz.label = Voicemail
-archive.device-uploads.tar.gz.label = Device Uploads 
+archive.device-uploads.tar.gz.label = Geräte Uploads 
