PT-44017445 - Missing german translation

--- a/sipxpbx/WEB-INF/setting/GroupTable_de.properties
+++ b/sipxpbx/WEB-INF/setting/GroupTable_de.properties
@@ -7,3 +7,4 @@ members=Anzahl Mitglieder
 name=Gruppenname
 title=Gruppen Tabelle
 msg.error.removeAdminGroup=Die Administratoren Gruppe kann nicht gelöscht werden
+confirm.delete=Sind Sie sicher, dass Sie die ausgew\u00E4hlte(n) Gruppe(n) l\u00F6schen wollen?
